# innowise_laboratory

./: README.md
lecture_1/: README.md
lecture_1/my_project/: main.py  pyproject.toml
lecture_2/: main.py
